# CarsClassification_PyTorch_Lightning

./: .gitignore  README.md  pyproject.toml
notebooks/: data_exploration_v0.ipynb
