[tool.poetry]
name = "carsclassification-pytorch-lightning"
version = "0.1.0"
description = "Identification of car manufacturer"
authors = ["sameervk <sameervk.iitkgp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
lightning = "^2.4.0"
torchvision = "^0.19.1"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

